SJRK-197: Alignment fixes for non-mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -527,6 +527,9 @@ footer span {
     .featured-resources-collection {
         margin-top: 10em;
     }
+    .resources-content {
+        margin-left: 2em;
+    }
     footer {
         font-size: 1.3em;
     }
